--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-form": "^4.10.3",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.5.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
